--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "qq2236639958/api",
+    "name": "vuea/api",
     "description": "php viptv api",
     "type": "library",
     "license": "MiT",
