--- a/composer.json
+++ b/composer.json
@@ -2,24 +2,31 @@
 	"name": "vuea/api",
 	"type": "library",
 	"description": "PHP常用接口代码",
-
-	"homepage": "https://vuea.github.io",
-	"license": "MIT",
 	"keywords": [
-		"php music",
+		"music",
 		"music api",
-		"lighty",
-		"lightweight"
+		"music",
+		"api"
 	],
+	"homepage": "https://github.com/vuea/api",
+	"license": "MIT",
 	"authors": [{
 		"name": "qq2236639958",
 		"email": "2236639958@qq.com",
 		"homepage": "https://vuea.github.io"
 	}],
+	"support": {
+		"issues": "https://github.com/vuea/api/issues",
+		"source": "https://github.com/vuea/api"
+	},	
 	"require": {
 		"php": ">=5.4.0",
 		"ext-curl": "*",
 		"ext-openssl": "*"
+	},
+	"suggest": {
+		"ext-bcmath": "Required to use BC Math calculate RSA.",
+		"ext-openssl": "Required to use OpenSSL encrypt params."
 	},
 	"autoload": {
 		"psr-4": {
@@ -28,6 +35,5 @@
 		"psr-0": {
 			"": "extend/"
 		}
-
 	}
 }
